fix horizontal scroll

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -113,7 +113,9 @@
         }
 
     }
-
+    @include middle-mobile {
+        width: 260px;
+    }
     @include mobile {
         width: 160px;
         max-height: 335px;
