--- a/src/components/Categories/Categories.scss
+++ b/src/components/Categories/Categories.scss
@@ -13,10 +13,13 @@
 
         row-gap: 40px;
 
+        @include minidesk {
+            grid-template-columns: repeat(3,1fr);
+        }
         @include tablet {
             grid-template-columns: repeat(2, 1fr);
         }
-
+       
         @include mobile {
             justify-items: center;
             grid-template-columns: repeat(2, 1fr);
