--- a/src/components/MapContent/MapContent.module.scss
+++ b/src/components/MapContent/MapContent.module.scss
@@ -11,14 +11,18 @@
 		width: 860px;
 		height: 770px;
 
-		@include mobile {
-			width: 100%;
-			height: 400px;
-		}
-
+		
+		
 		@include tablet {
 			width: 100%;
 			height: 500px;
+		}
+		@include middle-tablet {
+			width: 100%;
+		}
+		@include mobile {
+			width: 100%;
+			height: 400px;
 		}
 	}
 
@@ -26,6 +30,14 @@
 		@include tablet {
 			width: 100%;
 			min-height: 400px;
+		}
+		@include middle-tablet {
+			width: 70%;
+			min-height: 400px;
+		}
+		@include mobile {
+			width: 100%;
+			height: 400px;
 		}
 	}
 
