--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -7,7 +7,9 @@
         margin: 0 auto;
         padding: 80px 0;
         width: 1290px;
-
+        @include middle-desktop {
+           width: 100%;
+        }
         @include tablet {
             width: 100%;
 
@@ -27,7 +29,9 @@
         align-items: start;
         margin-bottom: 40px;
         gap: 90px;
-
+        @include middle-desktop {
+            flex-direction: column;
+        }
         @include tablet {
             flex-direction: column;
         }
